# safe-write

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
safe_write/: __init__.py  core.py
tests/: test_safe_write.py
